--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -1,22 +1,134 @@
-$primary-color      : #1976D2;
-$secondary-color    : #9c27b0;
-$text-color         : #231F20;
-
-$header-height      : 100px;
-$nv-ribbon-height   : 70px;
-
-$header-font        : "Poppins";
+$header-font        : "Nunito Sans";
 $body-font          : "Open Sans";
 $default-font       : sans-serif;
-$backgound-color    : lighten(#000000, 95%);
-$page_min_width     : 320px;
-$page_max_width     : 1920px;
+$background-color   : lighten(#000, 90%);
+$header-height      : 70px;
 // Font Awesome
-$ff-fa-duotone      : "Font Awesome 5 Duotone";
-$ff-fa-brands       : "Font Awesome 5 Brands";
-$ff-fa-brand        : "Font Awesome 5 Brands";
-$ff-fa-pro          : "Font Awesome 5 Pro";
-$ff-fa-free          : "Font Awesome 5 Free";
+$fa-pro-duotone     : "Font Awesome 5 Duotone";
+$fa-pro-brands      : "Font Awesome 5 Brands";
+$fa-pro             : "Font Awesome 5 Pro";
+$fa-free            : "Font Awesome 5 Free";
 $fa-weight-light    : 300;
 $fa-weight-regular  : 400;
 $fa-weight-solid    : 900;
+$fa-weight-bold     : 900;
+// Money symbols
+$money-symbols: (
+  'ALL': 'Lek',
+  'AFN': '؋',
+  'ARS': '$',
+  'AWG': 'ƒ',
+  'AUD': '$',
+  'AZN': '₼',
+  'BSD': '$',
+  'BBD': '$',
+  'BYN': 'Br',
+  'BZD': 'BZ$',
+  'BMD': '$',
+  'BOB': '$b',
+  'BAM': 'KM',
+  'BWP': 'P',
+  'BGN': 'лв',
+  'BRL': 'R$',
+  'BND': '$',
+  'KHR': '៛',
+  'CAD': '$',
+  'KYD': '$',
+  'CLP': '$',
+  'CNY': '¥',
+  'COP': '$',
+  'CRC': '₡',
+  'HRK': 'kn',
+  'CUP': '₱',
+  'CZK': 'Kč',
+  'DKK': 'kr',
+  'DOP': 'RD$',
+  'XCD': '$',
+  'EGP': '£',
+  'SVC': '$',
+  'EUR': '€',
+  'FKP': '£',
+  'FJD': '$',
+  'GHS': '¢',
+  'GIP': '£',
+  'GTQ': 'Q',
+  'GGP': '£',
+  'GYD': '$',
+  'HNL': 'L',
+  'HKD': '$',
+  'HUF': 'Ft',
+  'ISK': 'kr',
+  'INR': '₹',
+  'IDR': 'Rp',
+  'IRR': '﷼',
+  'IMP': '£',
+  'ILS': '₪',
+  'JMD': 'J$',
+  'JPY': '¥',
+  'JEP': '£',
+  'KZT': 'лв',
+  'KPW': '₩',
+  'KRW': '₩',
+  'KGS': 'лв',
+  'LAK': '₭',
+  'LBP': '£',
+  'LRD': '$',
+  'MKD': 'ден',
+  'MYR': 'RM',
+  'MUR': '₨',
+  'MXN': '$',
+  'MNT': '₮',
+  'MAD': 'د.إ',
+  'MZN': 'MT',
+  'NAD': '$',
+  'NPR': '₨',
+  'ANG': 'ƒ',
+  'NZD': '$',
+  'NIO': 'C$',
+  'NGN': '₦',
+  'NOK': 'kr',
+  'OMR': '﷼',
+  'PKR': '₨',
+  'PAB': 'B/.',
+  'PYG': 'Gs',
+  'PHP': '₱',
+  'PLN': 'zł',
+  'QAR': '﷼',
+  'RON': 'lei',
+  'RUB': '₽',
+  'SHP': '£',
+  'SAR': '﷼',
+  'RSD': 'Дин.',
+  'SCR': '₨',
+  'SGD': '$',
+  'SBD': '$',
+  'SOS': 'S',
+  'ZAR': 'R',
+  'LKR': '₨',
+  'SEK': 'kr',
+  'CHF': 'CHF',
+  'SRD': '$',
+  'SYP': '£',
+  'TWD': 'NT$',
+  'THB': '฿',
+  'TTD': 'TT$',
+  'TRY': '₺',
+  'TVD': '$',
+  'UAH': '₴',
+  'AED': 'د.إ',
+  'GBP': '£',
+  'USD': '$',
+  'UYU': '$U',
+  'UZS': 'лв',
+  'VEF': 'Bs',
+  'VND': '₫',
+  'YER': '﷼',
+  'ZWD': 'Z$'
+);
+@function money-symbol($code) {
+  $ret : map.get($money-symbols, $code);
+  @if $ret == false or $ret == null{
+    $ret : $code;
+  }
+	@return $ret;
+}
