--- a/css/dashui.css
+++ b/css/dashui.css
@@ -55,7 +55,7 @@ body {
   height: 100%;
   overflow: auto;
   color: #231F20;
-  background-color: #e6e6e6;
+  background-color: #f0f0f0;
   padding: 0;
   margin: 0;
 }
@@ -777,7 +777,7 @@ section#cwos-content {
 }
 
 aside#cwos-sidebar {
-  background-color: #d4d4d4;
+  background-color: #dedede;
   width: 260px;
   left: -260px;
   opacity: 0;
@@ -785,6 +785,268 @@ aside#cwos-sidebar {
 }
 aside#cwos-sidebar.active {
   left: 0;
+}
+aside#cwos-sidebar #cwos-asidewrp {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  height: auto;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight {
+  position: relative;
+  height: 170px;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight h1, aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight h2, aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight h3, aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight h4 {
+  margin: 0;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-slcover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-slcover img {
+  width: 100%;
+  height: 100%;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-slavatar {
+  position: absolute;
+  width: 75px;
+  height: 75px;
+  left: 92.5px;
+  top: 20px;
+  -webkit-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+  border: solid 10px rgba(242, 242, 242, 0.75);
+  background-color: #1976D2;
+  z-index: 5;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-slavatar img {
+  width: 100%;
+  height: 100%;
+  -webkit-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle {
+  position: absolute;
+  left: 5%;
+  bottom: 14px;
+  height: 55px;
+  width: 90%;
+  background-color: rgba(242, 242, 242, 0.75);
+  z-index: 5;
+  padding: 8px 45px 8px 8px;
+  -webkit-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle h3, aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle h4 {
+  margin: 3.5px 0;
+  text-align: center;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle h3 {
+  color: #1976D2;
+  font-size: 1.05em;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle h4 {
+  color: #4e4548;
+  font-size: 0.9em;
+  font-weight: lighter;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sptltoggl {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 40px;
+  margin: 0;
+  height: 55px;
+  background-color: transparent;
+  z-index: 7;
+  -webkit-border-radius: 0 3px 3px 0;
+  -ms-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  font-size: 1.5em;
+  padding: 12px 8px;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sptltoggl:hover, aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sptltoggl.btn-opn {
+  background-color: #1976D2;
+  color: #ffffff;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sptltoggl::before {
+  font-family: "Font Awesome 5 Pro", "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f0d7";
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sptltoggl.btn-opn::before {
+  content: "\f068";
+  font-weight: 400;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sllinks {
+  position: absolute;
+  left: 0;
+  top: 54px;
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  -webkit-border-radius: 0 0 3px 3px;
+  -ms-border-radius: 0 0 3px 3px;
+  -moz-border-radius: 0 0 3px 3px;
+  border-radius: 0 0 3px 3px;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2;
+  list-style: none;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sllinks li {
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  padding: 12px 21px;
+  color: inherit;
+  font-size: 0.85em;
+  font-weight: bold;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-sltitle #cwos-sllinks li:hover {
+  background-color: #ebebeb;
+  color: #12579b;
+  cursor: pointer;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp {
+  position: relative;
+  width: 100%;
+  height: 45px;
+  margin: 0;
+  padding: 0;
+  background-color: #dedede;
+  overflow: hidden;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-snavheadn {
+  margin: 0;
+  padding: 14px 16px;
+  padding-right: 45px;
+  height: 45px;
+  position: relative;
+  width: 100%;
+  font-size: 1.15em;
+  background-color: #d6d6d6;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-snavheadn::after {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 45px;
+  width: 45px;
+  background-color: #d1d1d1;
+  content: "\f078";
+  font-family: "Font Awesome 5 Pro", "Font Awesome 5 Free";
+  font-weight: 400;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  text-align: center;
+  padding: 12px;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-snavheadn:hover {
+  cursor: pointer;
+  background-color: #d1d1d1;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-snavheadn:hover::after {
+  cursor: pointer;
+  background-color: #cccccc;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-sidenav {
+  position: relative;
+  list-style: none;
+  margin: 14px 0;
+  padding: 8px 16px;
+  padding-left: 21px;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-sidenav li {
+  font-size: 0.95em;
+  font-weight: bold;
+  padding: 12px 14px;
+  position: relative;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  border-left-width: 7px;
+  border-left-color: transparent;
+  border-left-style: solid;
+  border-bottom: solid 1px #cccccc;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-sidenav li::after {
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 1px;
+  content: "";
+  background-color: #1976D2;
+  -webkit-transition: width 0.5s ease-in;
+  -moz-transition: width 0.5s ease-in;
+  -ms-transition: width 0.5s ease-in;
+  -o-transition: width 0.5s ease-in;
+  transition: width 0.5s ease-in;
+  width: 0px;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-sidenav li:hover {
+  background-color: #d1d1d1;
+  color: #1976D2;
+  cursor: pointer;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-sidenav li:hover::after {
+  width: 103%;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp .cwos-sidenav li.cwos-curnav {
+  border-left-color: #1976D2 !important;
+}
+aside#cwos-sidebar #cwos-asidewrp .cwos-snavwrp.xpndnv .cwos-snavheadn::after {
+  content: "\f068";
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-sidefoot {
+  position: relative;
+  margin-top: 100px;
+  font-size: 0.75em;
+  text-align: center;
+  padding: 14px 12px;
+  height: 100px;
+  width: 100%;
+  background-color: #dedede;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-sidefoot .cwos-ftprop {
+  font-size: 1em;
+  font-weight: bold;
+}
+aside#cwos-sidebar #cwos-asidewrp #cwos-sidefoot p {
+  margin: 3.5px 0;
+}
+aside#cwos-sidebar.hover {
+  overflow-y: auto;
 }
 
 section#cwos-content {
@@ -797,6 +1059,32 @@ section#cwos-content {
   right: 0;
   background-color: rgba(242, 242, 242, 0.6);
   z-index: 99;
+}
+
+#cwos-uiloadr {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 22px;
+  z-index: 3000;
+  font-size: 1.2em;
+  cursor: progress;
+}
+#cwos-uiloadr::before {
+  font-family: "Font Awesome 5 Pro", "Font Awesome 5 Free";
+  font-weight: 400;
+  content: "\f3f4";
+  -webkit-animation: spin 2s infinite linear;
+  animation: spin 2s infinite linear;
+  display: inline-block;
+}
+#cwos-uiloadr::after {
+  content: "Please wait";
+  display: inline-block;
+  margin-left: 12px;
 }
 
 body.no-scroll,
