--- a/sass/dashui.scss
+++ b/sass/dashui.scss
@@ -509,6 +509,214 @@ aside#cwos-sidebar{
   opacity: 0;
   z-index: 100;
   &.active{ left: 0;}
+  #cwos-asidewrp{
+    position: relative;
+    margin: 0; padding: 0;
+    min-height: 100%;
+    height: auto;
+    #cwos-asidespotlight{
+      position: relative;
+      height: 170px;
+      // margin-bottom: 60px;
+      h1, h2, h3, h4{ margin: 0;}
+      #cwos-slcover{
+        position: absolute;
+        left: 0; top: 0;
+        width: 100%; height: 100%;
+        z-index: 1;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+      }
+      #cwos-slavatar{
+        position: absolute;
+        width: 75px; height: 75px;
+        left: 92.5px;
+        top: 20px;
+        @include -br(100%);
+        border: solid 10px theme-color('transparent', 'light');
+        background-color: theme-color('native', bg);
+        z-index: 5;
+        img{
+          width: 100%;
+          height: 100%;
+          @include -br(100%);
+        }
+      }
+      #cwos-sltitle{
+        position: absolute;
+        left: 5%; bottom: 14px;
+        height: 55px; width: 90%;
+        background-color: theme-color('transparent', 'light');
+        z-index: 5;
+        padding: 8px 45px 8px 8px;
+        @include -br(3px);
+        h3, h4{
+          margin: 3.5px 0;
+          text-align: center;
+        }
+        h3{
+          color: theme-color('native', bg);
+          font-size: 1.05em;
+        }
+        h4{
+          color: lighten($text-color, 16%);
+          font-size: 0.9em;
+          font-weight: lighter;
+        }
+        #cwos-sptltoggl{ 
+          position: absolute;
+          right: 0; top: 0;
+          width: 40px;
+          margin: 0;
+          height: 55px;
+          background-color: transparent;
+          z-index: 7;
+          @include -br(0 3px 3px 0);
+          @include no-shadow;
+          font-size: 1.5em;
+          padding: 12px 8px;
+          &:hover, &.btn-opn{
+            background-color: theme-color('native', bg);
+            color: theme-color('native', fg);
+          }
+          &::before{
+            font-family: $fa-pro, $fa-free;
+            font-weight: $fa-weight-solid;
+            content: "\f0d7";
+          }
+          &.btn-opn::before{ content: "\f068"; font-weight: $fa-weight-regular;}
+        }
+        #cwos-sllinks{
+          position: absolute;
+          left: 0; top: 54px;
+          width: 100%;
+          height: 0; overflow: hidden;
+          opacity: 0;
+          @include -br(0 0 3px 3px);
+          margin: 0; padding: 0;
+          background-color: lighten(#000, 95%);
+          list-style: none;
+
+          li{
+            @include animate-all;
+            padding: 12px 21px;
+            color: inherit;
+            font-size: 0.85em;
+            font-weight: bold;
+            &:hover{
+              background-color: lighten(#000, 92%);
+              color: darken(theme-color("native", bg), 12%);
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+    .cwos-snavwrp{
+      position: relative;
+      width: 100%;
+      height: 45px;
+      margin: 0;
+      padding: 0;
+      background-color: darken($background-color, 7%);
+      overflow: hidden;
+      .cwos-snavheadn{
+        margin: 0;
+        padding: 14px 16px;
+        padding-right: 45px;
+        height: 45px;
+        position: relative;
+        width: 100%;
+        font-size: 1.15em;
+        background-color: darken($background-color, 10%);
+        @include animate-all;
+        &::after{
+          display: block;
+          position: absolute;
+          right: 0; top: 0;
+          height: 45px; width: 45px;
+          background-color: darken($background-color, 12%);
+          content: "\f078";
+          font-family: $fa-pro, $fa-free;
+          font-weight: $fa-weight-regular;
+          @include animate-all;
+          text-align: center;
+          padding: 12px;
+        }
+        &:hover{
+          cursor: pointer;
+          background-color: darken($background-color, 12%);
+        }
+        &:hover::after{
+          cursor: pointer;
+          background-color: darken($background-color, 14%);
+        }
+      }
+      .cwos-sidenav{
+        position: relative;
+        list-style: none;
+        margin: 14px 0;
+        padding: 8px 16px;
+        padding-left: 21px;
+        li {
+          font-size: 0.95em;
+          font-weight: bold;
+          padding: 12px 14px;
+          position: relative;
+          @include animate-all;
+          border-left-width: 7px;
+          border-left-color: transparent;
+          border-left-style: solid;
+          border-bottom: solid 1px darken($background-color, 14%);
+          &::after{
+            display: block;
+            position: absolute;
+            right: 0; bottom: 0;
+            height: 1px;
+            content: "";
+            background-color: theme-color('native', bg);
+            @include animate-width;
+            width: 0px;
+          }
+          &:hover{
+            background-color: darken($background-color, 12%);
+            color: theme-color('native', bg);
+            cursor: pointer;
+            &::after{ width: 103%;}
+          }
+          &.cwos-curnav {
+            border-left-color: theme-color('native', bg) !important;
+          }
+        }
+      }
+      &.xpndnv{
+        // height: auto;
+        .cwos-snavheadn::after{ content: "\f068";}
+      }
+    }
+    #cwos-sidefoot {
+      position: relative;
+      margin-top: 100px;
+      font-size: 0.75em;
+      text-align: center;
+      padding: 14px 12px;
+      height: 100px;
+      width: 100%;
+      background-color: darken($background-color, 7%);
+      .cwos-ftprop{
+        font-size: 1em;
+        font-weight: bold;
+      }
+      p{
+        margin: 3.5px 0;
+      }
+    }
+  }
+  &.hover{
+    overflow-y: auto;
+  }
 }
 section#cwos-content{
   right: 0;
@@ -519,6 +727,28 @@ section#cwos-content{
   right: 0;
   background-color: rgba(theme-color('transparent', light), 0.6);
   z-index: 99;
+}
+#cwos-uiloadr{
+  position: fixed;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(#fff, 0.9);
+  padding: 22px;
+  z-index: 3000;
+  font-size: 1.2em;
+  cursor: progress;
+  &::before{
+    font-family: $fa-pro, $fa-free;
+    font-weight: $fa-weight-regular;
+    content: "\f3f4";
+    @include spin;
+    display: inline-block;
+  }
+  &::after{
+    content: "Please wait";
+    display: inline-block;
+    margin-left: 12px;
+  }
 }
 body.no-scroll,
 body.no-scroll section#cwos-content{
