--- a/css/dashui.css
+++ b/css/dashui.css
@@ -807,10 +807,12 @@ aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-slcover {
   width: 100%;
   height: 100%;
   z-index: 1;
+  overflow: hidden;
 }
 aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-slcover img {
-  width: 100%;
   height: 100%;
+  min-width: 100%;
+  width: auto;
 }
 aside#cwos-sidebar #cwos-asidewrp #cwos-asidespotlight #cwos-slavatar {
   position: absolute;
