--- a/sass/dashui.scss
+++ b/sass/dashui.scss
@@ -524,9 +524,11 @@ aside#cwos-sidebar{
         left: 0; top: 0;
         width: 100%; height: 100%;
         z-index: 1;
+        overflow: hidden;
         img{
-          width: 100%;
           height: 100%;
+          min-width: 100%;
+          width: auto;
         }
       }
       #cwos-slavatar{
