--- a/sass/dashui.scss
+++ b/sass/dashui.scss
@@ -31,8 +31,7 @@ header#cwos-header {
   position: fixed;
   height: $header-height;
   width: 100%;
-  background-color: #fff;
-  @include drop-shadow(#000);
+  background-color: theme-color('native', bg);
   padding: 9px 21px;
   padding-left: 81px;
   z-index: 140;
@@ -55,9 +54,9 @@ header#cwos-header {
       margin: 0;
       padding: 15px;
       z-index: 0;
+      background-color: rgba(theme-color('cloud', bg), 0.5);
       &:hover{
         border-color: darken(theme-color('cloud',bg), 8%);
-        background-color: theme-color('cloud-blue', bg);
         color: theme-color('native', bg);
       }
       &::before{
@@ -66,6 +65,7 @@ header#cwos-header {
         font-size: 1.2em;
       }
       &.active{
+        background-color: darken(theme-color('cloud', bg),12%);
         color: theme-color('native', bg);
       }
     }
@@ -98,6 +98,13 @@ header#cwos-header {
   &.strict-centre #cwos-prjtitle{
     margin: 0 auto !important;
   }
+  #cwos-barwrp{
+    position: absolute;
+    top: 0; right: 0;
+    height: $header-height;
+    width:$header-height;
+    background-color: #fff;
+  }
   #cwos-user,
   #cwos-notification,
   #cwos-cart{
@@ -108,6 +115,7 @@ header#cwos-header {
     border-bottom-width: 10px;
     border-bottom-style: solid;
     border-bottom-color: transparent !important;
+    color: $text-color;
     @include animate-all;
     &:hover{
       cursor: pointer;
@@ -689,7 +697,7 @@ aside#cwos-sidebar{
             &::after{ width: 103%;}
           }
           &.cwos-curnav {
-            border-left-color: theme-color('native', bg) !important;
+            border-left-color: theme-color('native', bg);
           }
         }
       }
@@ -758,6 +766,7 @@ body.no-scroll section#cwos-content{
 }
 // tablet view
 @media only screen and (min-width: 48em) {
+  #cwos-barwrp{ width: calc($header-height * 5);}
   #cwos-mobxtra-icon{ height: 0px !important;}
   #cwos-user #cwos-user-title{ display: block !important; }
   #cwos-user{ width: calc($header-height * 3) !important; }
